--- a/ASP_WebForms_WebTinTuc/Web.config
+++ b/ASP_WebForms_WebTinTuc/Web.config
@@ -4,6 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>
+		<add name="ASP_NEWS" connectionString="Data Source=.\sqlexpress;Initial Catalog=ASP_NEWS_Advance;Integrated Security=True" />
+		<add name="ASP_NEWS_AdvanceConnectionString" connectionString="Data Source=.\sqlexpress;Initial Catalog=ASP_NEWS_Advance;Integrated Security=True"
+		 providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
